[gd_scene load_steps=8 format=3 uid="uid://m10fm2uxl3gt"]

[ext_resource type="Script" uid="uid://dhm4f0fg1nc8y" path="res://level-components/gui/gui.gd" id="1_dd61s"]
[ext_resource type="Texture2D" uid="uid://c0wttyywu1kur" path="res://assets/gui/health-bar-bg.svg" id="2_3msr8"]
[ext_resource type="LabelSettings" uid="uid://vgca4280kr0i" path="res://level-components/gui/gui-label.tres" id="2_jcy1l"]
[ext_resource type="Texture2D" uid="uid://c21376cgvu2yt" path="res://assets/gui/health-bar.svg" id="2_tsf1m"]
[ext_resource type="Texture2D" uid="uid://n6xuyujgbwmy" path="res://assets/gui/tower-images/headshot-test-tower.png" id="6_lp0mj"]
[ext_resource type="Texture2D" uid="uid://oksg34my3p6q" path="res://assets/gui/tower-images/goober-headshot.png" id="6_lrnym"]

[sub_resource type="LabelSettings" id="LabelSettings_cdt2i"]
font_size = 32
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="GUI" type="Control" groups=["gui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -448.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dd61s")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="CurrencyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Imagination: 500"
label_settings = ExtResource("2_jcy1l")

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
rounded = true
texture_under = ExtResource("2_3msr8")
texture_progress = ExtResource("2_tsf1m")

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -11.5
offset_right = 26.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Health"
label_settings = ExtResource("2_jcy1l")

[node name="RoundLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Round 1 of 20"
label_settings = ExtResource("2_jcy1l")

[node name="PlayPauseButton" type="Button" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="Store" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 448.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Store"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TowerButtonsGrid" type="GridContainer" parent="Store/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="TestTower" type="VBoxContainer" parent="Store/MarginContainer/TowerButtonsGrid"]
layout_mode = 2

[node name="PurchaseTestTower" type="Button" parent="Store/MarginContainer/TowerButtonsGrid/TestTower"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
icon = ExtResource("6_lp0mj")
icon_alignment = 1
expand_icon = true
metadata/tower = -1

[node name="TestTowerCostLabel" type="Label" parent="Store/MarginContainer/TowerButtonsGrid/TestTower" groups=["cost_labels"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Cost: 50"
label_settings = SubResource("LabelSettings_cdt2i")
horizontal_alignment = 1
vertical_alignment = 1
metadata/cost = 0
metadata/tower_type = -1

[node name="Goober" type="VBoxContainer" parent="Store/MarginContainer/TowerButtonsGrid"]
layout_mode = 2

[node name="PurchaseGoober" type="Button" parent="Store/MarginContainer/TowerButtonsGrid/Goober"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
icon = ExtResource("6_lrnym")
icon_alignment = 1
expand_icon = true
metadata/tower = 1

[node name="GooberCostLabel" type="Label" parent="Store/MarginContainer/TowerButtonsGrid/Goober" groups=["cost_labels"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Cost: 50"
label_settings = SubResource("LabelSettings_cdt2i")
horizontal_alignment = 1
vertical_alignment = 1
metadata/cost = 0
metadata/tower_type = -1

[connection signal="button_down" from="Store/MarginContainer/TowerButtonsGrid/TestTower/PurchaseTestTower" to="." method="_on_tower_purchase_button_down" binds= [-1]]
[connection signal="button_up" from="Store/MarginContainer/TowerButtonsGrid/TestTower/PurchaseTestTower" to="." method="_on_tower_purchase_button_up"]
[connection signal="button_down" from="Store/MarginContainer/TowerButtonsGrid/Goober/PurchaseGoober" to="." method="_on_tower_purchase_button_down" binds= [1]]
[connection signal="button_up" from="Store/MarginContainer/TowerButtonsGrid/Goober/PurchaseGoober" to="." method="_on_tower_purchase_button_up"]
